      dependencies built from the same source (if any) for the icon.
      This fixes false-positives menu-icon-missing in some cases.
  * checks/menus{,.desc}:
    + [NT] Remove "manual" lazy load of data file.
  * checks/nmu:
    + [NT] Remove Ubuntu specific code to handle their (lack of) NMUs.
      These tags are instead suppressed by the Ubuntu profile.
  * checks/scripts{,.desc}:
    + [NT] Mention devref 6.4 in command-with-path-in-maintainer-script.
      Thanks to Arno Töll for the patch.
    + [NT] Do not emit unusual-interpreter if the package provides the
      interpreter itself.
    + [NT] Ignore the lack of exec bit on th debconf shell modules.
  * checks/standards-version.desc:
    + [NT] Add references to the Policy upgrading checklist.  Thanks to
      Simon Paillard for the patch.

  * collection/*:
    + [NT] Use Lintian::Collect to access the package index.
  * collection/bin-pkg-control{,.desc}:
    + [NT] Compress control-index file and bump version of
      bin-pkg-control.
  * collection/copyright-file:
    + [NT] Remove code to look for old-style copyright file.
  * collection/file-info{,.desc}:
    + [NT] Compress file-info output and bump version of file-info.
  * collection/hardening-info{,.desc}:
    + [NT] New files.  Thanks to Kees Cook for the patch.
  * collection/index{,.desc}:
    + [NT] Compress index output and bump version of index.
  * collection/java-info{,.desc}:
    + [NT] Compress java-info output and bump version of java-info.
  * collection/objdump-info:
    + [NT] Use "fail" from Lintian::Util.pm rather than embedding a
      copy of it.
    + [NT] Use Lintian::Collect to find ELF files.
    + [NT] Replace all usage of objdump with readelf.
      (Closes: #614034)
    + [NT] Compress objdump-info output and bump version of objdump-info.
  * collection/strings{,.desc}:
    + [NT] Compress strings output and bump version of strings.

  * data:
    + [NT] Move to vendors/debian/ftp-master-auto-reject and replace