@@ -1,0 +1,5 @@
+Testname: rules-ignores-error-clean-fp
+Sequence: 6000
+Version: 1.0
+Description: Check against Lintian false-positive error
+Test-Against: debian-rules-ignores-make-clean-error
