@@ -1,0 +1,1 @@
+W: rules-ignores-error-clean source: debian-rules-ignores-make-clean-error line 6
